# menu

./: Cargo.toml  README.md  flake.nix
src/: error.rs  lib.rs  main.rs  menu.rs
