[package]
name = "menu"
version = "0.1.0"
authors = ["davide"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "*"
itertools = "*"
rand = "*"
regex = "*"
serde = { version = "1", features=["derive"] }
serde_json = "1"
